--- a/lab6-js/index.html
+++ b/lab6-js/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <form name="loginForm">
-        <label>Login <input type="text" name="login" value="string"></label>
-        <label>Password <input type="password" name="password" value="string"></label>
+        <label>Login <input type="text" name="login"></label>
+        <label>Password <input type="password" name="password"></label>
     </form>
     <button id="loginSubmit">Send</button>
 
